# robotics-visualizer

./: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/application/: CMakeLists.txt  app.cpp  app.h
src/geometry/: CMakeLists.txt  circle.cpp  circle.h  segment.cpp  segment.h
src/gui/: CMakeLists.txt  gui.cpp  gui.h  uiComponent.cpp  uiComponent.h
src/linear_algebra/: CMakeLists.txt  matrix.cpp  matrix.h  vector3d.cpp  vector3d.h
src/renderer/: CMakeLists.txt  arc.cpp  arc.h  circle.cpp  circle.h  circleBorder.cpp  circleBorder.h  color.h  event.h  frame.cpp  frame.h  line.cpp  line.h  main.cpp  messageBox.cpp  messageBox.h  polygon.cpp  polygon.h  primitive.cpp  primitive.h  rectangle.cpp  rectangle.h  triangle.cpp  triangle.h  vertex.h  window.cpp  window.h
src/robotics/: CMakeLists.txt  armComponent.cpp  armComponent.h  joint.h  link.h  prismaticRevolute.cpp  prismaticRevolute.h  revolutePrismatic.cpp  revolutePrismatic.h  revoluteRevolute.cpp  revoluteRevolute.h  robotArm.h  robotArmExample.cpp  robotArmExample.h
